[package]
name = "StackOverflowClone"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"]}
tokio = { version = "1.42.0", features = ["full"]}
axum = "0.8.1"
sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
thiserror = "2.0.9"
async-trait = "0.1.84"
time = "0.3.37"